html/views/wo.css
/**
 * Copyright (C) 2008-2013 Mr Temper <MrTemper@CarolinaRollergirls.com>, Rob Thomas, and WrathOfJon <crgscorespam@sacredregion.com>
 *
 * This file is part of the Carolina Rollergirls (CRG) ScoreBoard.
 * The CRG ScoreBoard is licensed under either the GNU General Public
 * License version 3 (or later), or the Apache License 2.0, at your option.
 * See the file COPYING for details.
 */

/* Change this background color to whatever your overlay chromakey is set to */
body { background-color: #0f0; } 

img { position: absolute; }
div { position: absolute; }

div.Full { width: 100%; height: 100%; }
img.Bar { width: 100%; top: 82.4%; }

#WftdaMain { z-index:100; }

/* These slide behind the main bar */
#WftdaT1LD { z-index:90; right: 5%; }
#WftdaT1LD.Show { right: 0%; }
#WftdaT2LD { z-index:90; left: 5%; }
#WftdaT2LD.Show { left: 0%; }

/* These probably DON'T need to be on seperate z-indexes.. But if they want to change the logos, they may. */

#WftdaT1OR { z-index:200; }
#WftdaT1T1 { z-index:190; }
#WftdaT1T2 { z-index:180; }
#WftdaT1T3 { z-index:170; }

#WftdaT2OR { z-index:150; }
#WftdaT2T1 { z-index:140; }
#WftdaT2T2 { z-index:130; }
#WftdaT2T3 { z-index:120; }



/*
a {
  position: relative;
  font-family: 'LiberationSans',helvetica;
  font-weight: bold;
}
*/

a {
  position: relative;
  font-family: 'robotobold';
  font-weight: bold;
}

#StatusBar { left: 25%; right: 25%; top: 92%; bottom: 2%; text-align: center; font-size: 2.75%; z-index: 300; }
#TopBar { left: 0%; width: 100%; top: 0%; height: 100%; text-align: center; z-index: 300; }

#StatusBar a { color: white; }
#ClockPeriodNumber { top: 86.375%; height: 5%; left: 53.375%; width: 4%; text-align: left; font-size: 3.6%; }
#ClockPeriodTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; font-size: 5.2%; }
#ClockPeriodTime:not(.ShowPeriod) { display: none; }

#ClockIntermissionTime { top: 84.75%; height: 7%; left: 56.375%; width: 25%; text-align: left; font-size: 5.2%; }
#ClockIntermissionTime:not(.ShowIntermission) { display: none; }

#ClockJamTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; font-size: 5.2%; }
#ClockJamTime:not(.ShowJam) { display: none; }

#ClockLineupTime { top: 84.75%; height: 7%; left: 40.45%; width: 6%; text-align: left; font-size: 5.2%; }
#ClockLineupTime:not(.ShowLineup) { display: none; }

#ClockTimeoutTime { top: 84.75%; height: 7%; left: 38.5%; width: 8%; text-align: right; font-size: 5.2%; }
#ClockTimeoutTime:not(.ShowTimeout) { display: none; }

#ClockJamNumber { top: 86.375%; height: 5%; left: 35.375%; width: 25%; text-align: left; font-size: 3.6%; }



#BottomBar { left: 0%; width: 100%; top 0%; height: 100%; text-align: center; z-index: 300; }

#Team1Name { top: 84.75%; height: 7%; left: 15%; width: 13%; text-align: left; overflow: hidden; font-size: 5.2%; }
#Team1Score { top: 84.75%; height: 7%; right: 67%; width: 25%; text-align: right; font-size: 5.2%; }

#Team2Name { top: 84.75%; height: 7%; right: 15%; width: 13%; text-align: right; overflow: hidden; font-size: 5.2%; }
#Team2Score { top: 84.75%; height: 7%; left: 67%; width: 25%; text-align: left; font-size: 5.2%; }

#Team1Name.AlternateName a.Name { display: none; }
#Team1Name:not(.AlternateName) a.AlternateName { display: none; }
#Team2Name.AlternateName a.Name { display: none; }
#Team2Name:not(.AlternateName) a.AlternateName { display: none; }

#BottomBarFullWidth { top: 85.5%; bottom: 0; width: 100%; z-index: 300; }
#Team1Logo,#Team2Logo { bottom: 0; height: 100%; }
#Team1Logo { left: 0%; right: 90%; }
#Team2Logo { left: 90%; right: 0% }

.noBack {
	background-color:rgba(0,255,0,0.0);
}

